Refresh save company id and overflow scroll in assemblies section fix tag is changed similar to phase in components, error toast duration to 5 sec

--- a/src/app/components/assemblies/assemblies.component.scss
+++ b/src/app/components/assemblies/assemblies.component.scss
@@ -52,6 +52,7 @@
   }
 }
 .assembly-lists {
+  height: calc(100vh - 135px);
   overflow: hidden auto;
   &::-webkit-scrollbar {
     width: 10px;
