--- a/src/app/components/category-components/category-components.component.scss
+++ b/src/app/components/category-components/category-components.component.scss
@@ -2,6 +2,20 @@ app-category-components {
   background-color: #151515;
 }
 .table {
+  height: calc( 100vh - 193px);
+  overflow: hidden auto;
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+   
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px #232323;
+  }
+   
+  &::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #4f4f4f;
+  }
   table {
     width: 100%;
     border: 2px solid #4a4a4a;
@@ -113,7 +127,7 @@ app-category-components {
     width: 50px !important;
     text-align: center;
   }
-  &-phase {
+  &-phase, &-tag {
     padding-left: 5px;
     background-color: #4a4a4a;
     border: 1px solid #2b2b2b;
